# connectivity-samples

./: Fi  LICENSE  README.md
.github/workflows/: android.yml
BeamLargeFiles/: README.md
BeamLargeFiles/.google/: packaging.yaml
BeamLargeFiles/Application/: build.gradle
BeamLargeFiles/Application/tests/: AndroidManifest.xml
BluetoothAdvertisements/: README.md  settings.gradle
BluetoothAdvertisements/.google/: packaging.yaml
BluetoothAdvertisements/Application/: build.gradle
BluetoothAdvertisements/app/: build.gradle
BluetoothAdvertisements/gradle/wrapper/: gradle-wrapper.properties
BluetoothAdvertisementsKotlin/: README.md  build.gradle  settings.gradle
BluetoothAdvertisementsKotlin/.google/: packaging.yaml
BluetoothAdvertisementsKotlin/app/: build.gradle
BluetoothAdvertisementsKotlin/gradle/wrapper/: gradle-wrapper.properties
BluetoothChat/: README.md  build.gradle  settings.gradle
BluetoothChat/.google/: packaging.yaml
BluetoothChat/Application/: build.gradle
BluetoothLeChat/: README.md  build.gradle  settings.gradle
BluetoothLeChat/.google/: packaging.yaml
BluetoothLeChat/app/: build.gradle
BluetoothLeGatt/: README.md  gradle.properties
BluetoothLeGatt/.google/: packaging.yaml
BluetoothLeGatt/Application/: build.gradle
CronetKotlin/: build.gradle  gradle.properties
CronetKotlin/.google/: packaging.yaml
CronetKotlin/app/: proguard-rules.pro
CrossDeviceRockPaperScissors/: .gitignore  build.gradle  settings.gradle
CrossDeviceRockPaperScissors/app/: build.gradle
CrossDeviceRockPaperScissorsKotlin/: README.md  build.gradle  settings.gradle
CrossDeviceRockPaperScissorsKotlin/app/: build.gradle  proguard-rules.pro
NearbyConnectionsCpp/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
NearbyConnectionsCpp/.google/: packaging.yaml
NearbyConnectionsCpp/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
NearbyConnectionsCpp/app/src/main/: AndroidManifest.xml
NearbyConnectionsCpp/app/src/main/cpp/: GFKSimpleGame.cpp  GFKSimpleGame.h  NearbyConnection.cpp  NearbyNativeActivity.cpp  NearbyNativeActivity.h  NearbyNativeActivity_Engine.cpp
NearbyConnectionsCpp/app/src/main/cpp/jui_helper/: CMakeLists.txt  JavaUI.cpp  JavaUI.h  JavaUI_Dialog.cpp  JavaUI_View.h  JavaUI_Window.cpp
NearbyConnectionsCpp/app/src/main/cpp/ndk_helper/: CMakeLists.txt  GLContext.cpp  GLContext.h  JNIHelper.cpp  JNIHelper.h  NDKHelper.h  gl3stub.cpp  gl3stub.h
NearbyConnectionsCpp/app/src/main/java/com/google/example/games/nearbyconnections/: NearbyNativeActivity.java
NearbyConnectionsCpp/app/src/main/java/com/sample/helper/: JUIButton.java  JUIDialog.java  JUIForwardingPopupWindow.java  JUIHelper.java  JUITextView.java  NDKHelper.java
NearbyConnectionsCpp/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
NearbyConnectionsCpp/gpg-sdk/: build.gradle
NearbyConnectionsRockPaperScissors/: README.md  build.gradle
NearbyConnectionsRockPaperScissors/.google/: packaging.yaml
NearbyConnectionsRockPaperScissors/app/: build.gradle  proguard-rules.pro
NearbyConnectionsWalkieTalkie/: README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
NearbyConnectionsWalkieTalkie/.google/: packaging.yaml
NearbyConnectionsWalkieTalkie/app/: build.gradle  build.gradle.kts
NearbyMessagesBackgroundBeacons/: README.md  build.gradle
NearbyMessagesBackgroundBeacons/.google/: packaging.yaml
NearbyMessagesBackgroundBeacons/app/: build.gradle
NearbyMessagesDevices/: .gitignore  README.md  build.gradle
NearbyMessagesDevices/.google/: packaging.yaml
NearbyMessagesDevices/app/: build.gradle
NetworkConnect/: README.md
NetworkConnect/.google/: packaging.yaml
NetworkConnect/Application/: build.gradle
UwbRanging/: CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  build.gradle  settings.gradle
UwbRanging/.google/: packaging.yaml
UwbRanging/app/: build.gradle
UwbRanging/uwbranging/: build.gradle
WifiRttScan/: README.md  build.gradle  gradlew  settings.gradle
WifiRttScan/.google/: packaging.yaml
WifiRttScan/Application/: build.gradle
cronet/: build.gradle  gradle.properties
cronet/app/: build.gradle
(+375 files in other folders)
